--- a/gitfolio/index.html
+++ b/gitfolio/index.html
@@ -82,6 +82,19 @@
                         </div>
                     </section>
                 </a>
+                <a href="https://github.com/jasperswallen/jasperswallen.github.io" target="_blank">
+                    <section>
+                        <div class="section_title">jasperswallen.github.io</div>
+                        <div class="about_section">
+                            <span style="display:block;">Code for my personal website</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
+                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                        </div>
+                    </section>
+                </a>
             </div>
         </div>
     </div>
