--- a/gitfolio/index.html
+++ b/gitfolio/index.html
@@ -43,6 +43,34 @@
         <div id="work">
             <h1>Work.</h1>
             <div class="projects" id="work_section">
+                <a href="https://github.com/jasperswallen/StackOverflow2CPP" target="_blank">
+                    <section>
+                        <div class="section_title">StackOverflow2CPP</div>
+                        <div class="about_section">
+                            <span style="display:block;">Converts StackOverflow to CPlusPlus.com</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
+                            <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
+                        </div>
+                    </section>
+                </a>
+
+                <a href="https://github.com/jasperswallen/jasperswallen.github.io" target="_blank">
+                    <section>
+                        <div class="section_title">jasperswallen.github.io</div>
+                        <div class="about_section">
+                            <span style="display:block;">Code for my personal website</span>
+                        </div>
+                        <div class="bottom_section">
+                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; HTML</span>
+                            <span><i class="fas fa-star"></i>&nbsp; 1</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
+                        </div>
+                    </section>
+                </a>
+
                 <a href="https://github.com/jasperswallen/colonel-blotto" target="_blank">
                     <section>
                         <div class="section_title">colonel-blotto</div>
@@ -52,10 +80,11 @@
                         <div class="bottom_section">
                             <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; C++</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
                         </div>
                     </section>
                 </a>
+
                 <a href="https://github.com/jasperswallen/unlock-smartcar" target="_blank">
                     <section>
                         <div class="section_title">unlock-smartcar</div>
@@ -65,36 +94,11 @@
                         <div class="bottom_section">
                             <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; Python</span>
                             <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
+                            <span><i class="fas fa-code-branch"></i>&nbsp; 1</span>
                         </div>
                     </section>
                 </a>
-                <a href="https://github.com/jasperswallen/StackOverflow2CPP" target="_blank">
-                    <section>
-                        <div class="section_title">StackOverflow2CPP</div>
-                        <div class="about_section">
-                            <span style="display:block;">Converts StackOverflow to CPlusPlus.com</span>
-                        </div>
-                        <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                        </div>
-                    </section>
-                </a>
-                <a href="https://github.com/jasperswallen/jasperswallen.github.io" target="_blank">
-                    <section>
-                        <div class="section_title">jasperswallen.github.io</div>
-                        <div class="about_section">
-                            <span style="display:block;">Code for my personal website</span>
-                        </div>
-                        <div class="bottom_section">
-                            <span style="display:inline-block;"><i class="fas fa-code"></i>&nbsp; CSS</span>
-                            <span><i class="fas fa-star"></i>&nbsp; 0</span>
-                            <span><i class="fas fa-code-branch"></i>&nbsp; 0</span>
-                        </div>
-                    </section>
-                </a>
+
             </div>
         </div>
     </div>
