--- a/growing-up/index.html
+++ b/growing-up/index.html
@@ -47,8 +47,8 @@
 						<li>National Merit Scholar </li>
 						<li>AP Scholar with Distinction</li>
 						<li>Athlete of the Year</li>
-						<li>3x MVP (Swimming, Track, and Cross Country)</li>
-						<li>3x Captain (XC, Swimming, and Track)</li>
+						<li>3x MVP (Cross Country, Swimming, and Track)</li>
+						<li>3x Captain (Cross Country, Swimming, and Track)</li>
 						<li>7x Conference Champion</li>
 					</ul>
 				</p>
@@ -61,7 +61,7 @@
 	<footer id="footer" class="wrapper alt">
 		<div class="inner">
 			<ul class="menu">
-				<li>&copy; 2019 Jasper Swallen. All rights reserved.</li>
+				<li>&copy; 2020 Jasper Swallen. All rights reserved.</li>
 			</ul>
 		</div>
 	</footer>
