--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="content">
 					<div class="inner">
 						<h2>To Los Angeles</h2>
-						<p>I am currently a freshman at the University of Southern California, studying to get my B.S.
+						<p>I am currently a sophomore at the University of Southern California, studying to get my B.S.
 							in Physics and Computer Science.</p>
 						<ul class="actions">
 							<li><a href="./college/" class="button">Learn more</a></li>
@@ -74,7 +74,8 @@
 				</div>
 			</section>
 			<section>
-				<a href="./plans/" class="image"><img src="images/world.jpg" alt="The World" data-position="25% 25%" /></a>
+				<a href="./plans/" class="image"><img src="images/world.jpg" alt="The World"
+						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>And Beyond</h2>
@@ -101,7 +102,7 @@
 						<p>As a second year student, I have used coding in and out of the classroom. In school, I have
 							primarily used C++. I have also participated in Hackathons (React.js, Node.js, Data
 							Manipulation, etc.), developed iOS tweaks (Objective C and Logos), and made personal
-							projects (C++/Python).</p>
+							projects (C++/Python). I have also coded extensively for <a href="http://www.uscrpl.com/" target="_blank">USC RPL</a>'s simulator.</p>
 					</section>
 					<section>
 						<span class="icon major fa-handshake-o"></span>
@@ -112,8 +113,8 @@
 							issues &amp; technology and science.</p>
 					</section>
 					<section>
-						<span class="icon major fa-flask"></span>
-						<h3>Science!</h3>
+						<span class="icon major fa-rocket"></span>
+						<h3>Physics</h3>
 						<p>As a physics and computer science major, I am gaining invaluable lab and theoretical skills
 							that apply to many facets of my life. Physics will expose me to more theoretical and literal
 							issues, while computer science provides a framework to solving these issues.</p>
@@ -121,7 +122,8 @@
 					<section>
 						<span class="icon major fa-pencil-square-o"></span>
 						<h3>Writing</h3>
-						<p>While most STEM majors are focusing exclusively on STEM classes, I'm writing. Since I'm in
+						<p>While most STEM majors are focusing exclusively on STEM classes, I'm also writing. Since I'm
+							in
 							Thematic Option, I have to balance a rigorous STEM courseload with difficult writing-based
 							classes.</p>
 					</section>
@@ -150,7 +152,7 @@
 											class="fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://instagram.com/jasperswallen" target="_blank"
 											class="fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://www.linkedin.com/in/jasper-swallen-637698169/" target="_blank"
+									<li><a href="https://www.linkedin.com/in/jasperswallen/" target="_blank"
 											class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								</ul>
 							</li>
@@ -166,7 +168,7 @@
 	<footer id="footer" class="wrapper style1-alt">
 		<div class="inner">
 			<ul class="menu">
-				<li>&copy; 2019 Jasper Swallen. All rights reserved.</li>
+				<li>&copy; 2020 Jasper Swallen. All rights reserved.</li>
 			</ul>
 		</div>
 	</footer>
